--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="application-name" content="compile-battle-stats">
+    <meta name="author" content="ril">
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+    <meta name="color-scheme" content=dark>
+    <meta name="theme-color" content="#09090b"> <!-- bg-zinc-950 -->
+    <meta name="description" content="ボードゲーム「コンパイル（Compile）」の戦績データ（バトルスタッツ）を集計し、勝率や傾向などの詳細な統計情報を表示・分析するWebアプリです。" />
+    <meta name="keywords" content="コンパイル, Compile, ボードゲーム, 戦績, 統計, アナリティクス, トラッカー, Battle Stats" />
+    <meta property="og:url" content="https://compile-battle-stats.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Compile Battle Stats Tracker | ボードゲーム Compile 戦績集計" />
+    <meta property="og:description" content="A web app for tracking and analyzing battle statistics, win rates, and trends for the board game 'Compile'." />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>compile-battle-stats</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Compile Battle Stats Tracker | ボードゲーム Compile 戦績集計・統計アプリ</title>
   </head>
   <body>
     <div id="root"></div>
