--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://boardgame-compile.firebaseapp.com">
+    <link rel="preconnect" href="https://firestore.googleapis.com">
+    <link rel="preconnect" href="https://https://www.googleapis.com">
+    <link rel="preconnect" href="https://apis.google.com">
     <meta charset="UTF-8" />
     <meta name="application-name" content="compile-battle-stats">
     <meta name="author" content="ril">
