--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <link rel="preconnect" href="https://boardgame-compile.firebaseapp.com">
     <link rel="preconnect" href="https://firestore.googleapis.com">
